add js directory

--- a/Andrey Storozhko/index.html
+++ b/Andrey Storozhko/index.html
@@ -5,11 +5,11 @@
     <title>FastFoodCafe</title>
 </head>
 <body>
-    <script src="Menu.js"></script>
-    <script src="Hamburger.js"></script>
-    <script src="Salad.js"></script>
-    <script src="Drink.js"></script>
-    <script src="Order.js"></script>
-    <script src="index.js"></script>
+    <script src="js/Menu.js"></script>
+    <script src="js/Hamburger.js"></script>
+    <script src="js/Salad.js"></script>
+    <script src="js/Drink.js"></script>
+    <script src="js/Order.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
